--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>Tribute Page - Sundar Pichai, CEO Alphabet & Google</title>
 </head>
 <body>
-    
+    <main class="container">
+        <section class="header">
+            <img src="./assets/images/profile.webp" alt="Profile Photo">
+            <div class="personal-info">
+                <h2 class="name">Sundar Pichai</h2>
+                <p class="designation">CEO @Google &amp; @Alphabet</p>
+            </div>
+        </section>
+
+        <section class="details">
+            <p>
+                <span class="text-bold">Pichai Sundararajan</span> (born June 10, 1972), better known as Sundar Pichai, is an Indian-American business executive. He is the <span class="text-bold">Chief Executive Officer (CEO)</span> of <span class="text-bold">Alphabet Inc.</span> and its subsidiary <span class="text-bold">Google</span>.
+                Born in Madurai, India, Pichai earned his degree from <span class="text-bold">IIT Kharagpur</span> in metallurgical engineering. Moving to the United States, he attained an M.S. from Stanford University in materials science and engineering and further attained an <span class="text-bold">MBA from the Wharton School of the University of Pennsylvania</span>, where he was named a Siebel Scholar and a Palmer Scholar, respectively.
+
+                Pichai <span class="text-bold">joined Google in 2004</span>, where he led the product management and innovation efforts for a suite of Google's client software products, including <span class="text-bold">Google Chrome and Chrome OS</span>, as well as being largely responsible for Google Drive. He went on to oversee the development of other applications such as <span class="text-bold">Gmail and Google Maps</span>.
+            </p>
+        </section>
+
+        <section class="read-more">
+            <p>
+                Read more about Sundar Pichai on <a href="https://en.wikipedia.org/wiki/Sundar_Pichai" target="_blank">Wikipedia</a>
+            </p>
+        </section>
+    </main>
 </body>
 </html>
